--- a/hotel/src/main/res/layout/fragment_hotel.xml
+++ b/hotel/src/main/res/layout/fragment_hotel.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--TODO закинь цвет с color.xml-->
+<!--TODO закинь цвета с color.xml-->
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -21,7 +21,6 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/black"
                     android:textSize="18sp"
                     android:text="@string/hotel"
                     android:layout_gravity="center"/>
@@ -34,7 +33,6 @@
             android:layout_marginTop="?attr/actionBarSize"
             android:layout_marginBottom="70dp">
 
-            <!--TODO закинь цвет с color.xml-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -61,7 +59,6 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"/>
 
-                        <!--TODO закинь цвета в color.xml-->
                         <androidx.cardview.widget.CardView
                             android:id="@+id/rating_card"
                             android:layout_width="wrap_content"
@@ -73,7 +70,6 @@
                             app:cardCornerRadius="5dp"
                             app:cardElevation="0dp">
 
-                            <!--TODO закинь цвет в стили-->
                             <TextView
                                 android:id="@+id/rating"
                                 android:layout_width="wrap_content"
@@ -85,19 +81,16 @@
 
                         </androidx.cardview.widget.CardView>
 
-                        <!--TODO закинь размер и цвет в стили-->
                         <TextView
                             android:id="@+id/hotel_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:textSize="22sp"
-                            android:textColor="@android:color/black"
                             app:layout_constraintTop_toBottomOf="@id/rating_card"
                             app:layout_constraintStart_toStartOf="@id/slider"
                             app:layout_constraintEnd_toEndOf="@id/slider" />
 
-                        <!--TODO закинь размер и цвет в стили-->
                         <TextView
                             android:id="@+id/hotel_address"
                             android:layout_width="wrap_content"
@@ -111,7 +104,6 @@
                             app:layout_constraintStart_toStartOf="@id/slider"
                             app:layout_constraintEnd_toEndOf="@id/slider" />
 
-                        <!--TODO закинь размер и тип в стили-->
                         <TextView
                             android:id="@+id/price"
                             android:layout_width="wrap_content"
@@ -122,7 +114,6 @@
                             app:layout_constraintStart_toStartOf="@id/slider"
                             app:layout_constraintTop_toBottomOf="@id/hotel_address" />
 
-                        <!--TODO закинь цвет в стили-->
                         <TextView
                             android:id="@+id/price_type"
                             android:layout_width="wrap_content"
@@ -134,7 +125,6 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
 
-                <!--TODO Дохуя исправлений, лень перечислять-->
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -153,7 +143,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="22sp"
-                            android:textColor="@android:color/black"
                             android:text="@string/about_hotel"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -359,5 +348,10 @@
                 android:background="@drawable/blue_button"
                 android:textAllCaps="false" />
         </FrameLayout>
+        <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
     </FrameLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
