--- a/main/src/main/res/drawable/blue_button.xml
+++ b/main/src/main/res/drawable/blue_button.xml
@@ -3,5 +3,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="15dp" />
-    <solid android:color="#0D72FF" />
+    <solid android:color="@color/blue" />
 </shape>
