--- a/hotel/src/main/res/layout/fragment_hotel.xml
+++ b/hotel/src/main/res/layout/fragment_hotel.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
 
     <FrameLayout
@@ -44,7 +45,16 @@
                             <androidx.viewpager2.widget.ViewPager2
                                 android:id="@+id/photo_slider"
                                 android:layout_width="match_parent"
-                                android:layout_height="200dp" />
+                                android:layout_height="200dp"/>
+                            <com.ibaevzz.main.DotsView
+                                android:id="@+id/dots"
+                                android:layout_width="100dp"
+                                android:layout_height="30dp"
+                                android:layout_gravity="bottom"
+                                android:layout_marginBottom="10dp"
+                                custom:dots_count="5"
+                                custom:dots_radius="10dp"
+                                custom:corner="5dp"/>
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
